[package]
name = "tiny-ping"
version = "0.4.2"
authors = ["Lucas Rooyakkers <lucas.rooyakkers@pm.me>", "An Long <aisk1988@gmail.com>", "kolapapa <milk346512016@gmail.com>"]
license = "MIT"
description = "Small Asynchronous ICMP library"
repository = "https://github.com/Fierthraix/ping"
edition = "2018"

[dependencies]
parking_lot = "0.11"
pnet_packet = "0.27"
socket2 = { version = "0.4.0", features = ["all"] }
tokio = { version = "1.5", features = ["net", "rt", "time"] }
